--- a/src/client/public/styles.css
+++ b/src/client/public/styles.css
@@ -34,11 +34,11 @@ main {
 }
 
 #start-game-modal {
+  position: relative;
   border: #eee;
   background-color: #fdfdfd;
   border-radius: 8px;
   padding: 32px;
-  /* min-width: 400px; */
   display: flex;
   flex-direction: column;
   align-items: center;
